--- a/FineTuning/finetuning-hf.ipynb
+++ b/FineTuning/finetuning-hf.ipynb
@@ -1136,8 +1136,10 @@
         "probs = torch.nn.functional.softmax(logits, dim=-1)\n",
         "\n",
         "probs = probs * 100\n",
-        "print(f\"Benign: {probs[0,0]:.2f}%\")\n",
-        "print(f\"Malicious: {probs[0,1]:.2f}%\")"
+        "class_label = \"MALICIOUS\" if probs[0,1] > probs[0,0] else \"BENIGN\"\n",
+        "print(class_label)\n",
+        "print(f\"BENIGN: {probs[0,0]:.2f}%\")\n",
+        "print(f\"MALICIOUS: {probs[0,1]:.2f}%\")"
       ]
     }
   ],
