--- a/FineTuning/inference.ipynb
+++ b/FineTuning/inference.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "b2363645",
    "metadata": {},
    "outputs": [
@@ -10,11 +10,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Xet Storage is enabled for this repo, but the 'hf_xet' package is not installed. Falling back to regular HTTP download. For better performance, install the package with: `pip install huggingface_hub[hf_xet]` or `pip install hf_xet`\n",
+      "C:\\Users\\Amina Akhtar\\AppData\\Roaming\\Python\\Python310\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n",
       "C:\\Users\\Amina Akhtar\\AppData\\Roaming\\Python\\Python310\\site-packages\\huggingface_hub\\file_download.py:143: UserWarning: `huggingface_hub` cache-system uses symlinks by default to efficiently store duplicated files but your machine does not support them in C:\\Users\\Amina Akhtar\\.cache\\huggingface\\hub\\models--AminaAkhtar--Llama-3.2-1B-prompt-classifier. Caching files will still work but in a degraded version that might require more space on your disk. This warning can be disabled by setting the `HF_HUB_DISABLE_SYMLINKS_WARNING` environment variable. For more details, see https://huggingface.co/docs/huggingface_hub/how-to-cache#limitations.\n",
       "To support symlinks on Windows, you either need to activate Developer Mode or to run Python as an administrator. In order to activate developer mode, see this article: https://docs.microsoft.com/en-us/windows/apps/get-started/enable-your-device-for-development\n",
-      "  warnings.warn(message)\n",
-      "Xet Storage is enabled for this repo, but the 'hf_xet' package is not installed. Falling back to regular HTTP download. For better performance, install the package with: `pip install huggingface_hub[hf_xet]` or `pip install hf_xet`\n"
+      "  warnings.warn(message)\n"
      ]
     },
     {
@@ -23,7 +23,7 @@
        "{'Label': 'Benign', 'Confidence': 1.0}"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "id": "d789d7fd",
    "metadata": {},
    "outputs": [
@@ -73,7 +73,7 @@
        "{'Label': 'Malicious', 'Confidence': 1.0}"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -82,7 +82,7 @@
     "# Using locally saved model\n",
     "from transformers import AutoTokenizer, AutoModelForSequenceClassification\n",
     "import torch\n",
-    "path=r\"D:\\Projects\\RAG-Chatbot\\FineTuning\\Llama-3.2-Classifier\"\n",
+    "path=r\"Llama-3.2-Classifier\"\n",
     "label_map = {0:\"benign\", 1:\"malicious\"}\n",
     "MAX_LENGTH=256\n",
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
